<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/main_layout"
        android:background="@drawable/lib_rate_dialog_bg"
        android:layout_marginTop="@dimen/cm_dp_46"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rate_tip_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cm_dp_24"
            android:layout_marginTop="@dimen/cm_dp_46"
            android:layout_marginRight="@dimen/cm_dp_24"
            android:layout_marginBottom="@dimen/cm_dp_24">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cm_dp_24"
                android:layout_below="@+id/rate_emoji"
                tools:ignore="NotSibling">

                <androidx.appcompat.widget.AppCompatTextView
                    android:textSize="@dimen/cm_sp_19"
                    android:textColor="@color/lib_rate_dialog_message_text_color"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lib_rate_dialog_tip"
                    android:maxLines="4"
                    android:layout_centerInParent="true"
                    android:fontFamily="@string/lib_rate_roboto_medium"
                    app:autoSizeMaxTextSize="@dimen/cm_sp_19"
                    app:autoSizeMinTextSize="@dimen/cm_sp_10"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:textSize="@dimen/cm_sp_24"
                        android:textColor="@color/lib_rate_dialog_message_text_color"
                        android:gravity="start"
                        android:id="@+id/rate_result_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lib_rate_dialog_title"
                        android:maxLines="2"
                        android:fontFamily="@string/lib_rate_roboto_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:textSize="@dimen/cm_sp_16"
                        android:textColor="@color/lib_rate_dialog_message_text_color"
                        android:gravity="start"
                        android:id="@+id/rate_result_tip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/cm_dp_8"
                        android:text="@string/lib_rate_dialog_tip"
                        android:maxLines="3"
                        android:fontFamily="@string/lib_rate_roboto_regular" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/star_layout"
            android:layout_width="match_parent"
            android:layout_below="@+id/rate_tip_layout"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRatingBar
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/rtb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                style="@style/RatingBarApp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/lib_rate_shining_right"
                app:layout_constraintLeft_toRightOf="@+id/rtb"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/lib_rate_five_star_arrow"
                app:layout_constraintRight_toRightOf="@+id/rtb"
                app:layout_constraintTop_toBottomOf="@+id/rtb"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/rate_hand_layout"
            android:layout_marginTop="-25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cm_dp_32"
            android:layout_marginRight="@dimen/cm_dp_32"
            android:weightSum="5"
            android:layout_below="@+id/star_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/cm_sp_16"
                android:textColor="@color/lib_rate_dialog_five_star_tip_color"
                android:gravity="end"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lib_rate_five_stars_tip"
                android:maxLines="2"
                android:layout_weight="3.6"
                android:fontFamily="@string/lib_rate_roboto_regular"
                app:autoSizeMaxTextSize="@dimen/cm_sp_16"
                app:autoSizeMinTextSize="@dimen/cm_sp_10"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <LinearLayout
            android:gravity="right|center_vertical|center_horizontal|center|end"
            android:orientation="horizontal"
            android:background="@drawable/lib_rate_button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cm_dp_12"
            android:layout_marginTop="@dimen/cm_dp_24"
            android:layout_marginRight="@dimen/cm_dp_12"
            android:layout_marginBottom="@dimen/cm_dp_24"
            android:layout_below="@+id/rate_hand_layout"
            android:layout_marginStart="@dimen/cm_dp_12"
            android:layout_marginEnd="@dimen/cm_dp_12">

            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/cm_sp_18"
                android:textStyle="bold"
                android:textColor="@color/lib_rate_button_text_color"
                android:gravity="center"
                android:id="@+id/lib_rate_button"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cm_dp_3"
                android:layout_marginBottom="@dimen/cm_dp_3"
                android:minHeight="@dimen/cm_dp_50"
                android:text="@string/lib_rate_btn_rate"
                android:maxLines="1"
                android:fontFamily="@string/lib_rate_roboto_medium"
                android:layout_marginStart="@dimen/cm_dp_16"
                android:layout_marginEnd="@dimen/cm_dp_16"
                app:autoSizeMaxTextSize="@dimen/cm_sp_18"
                app:autoSizeMinTextSize="@dimen/cm_sp_10"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/cm_dp_24"
        android:layout_marginTop="-55dp"
        android:layout_marginRight="@dimen/cm_dp_24"
        android:layout_alignTop="@+id/main_layout"
        android:layout_alignStart="@+id/main_layout">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rate_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lib_rate_emoji_star_0" />

    </LinearLayout>



</RelativeLayout>
